--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.9.10",
+    "@clerk/nextjs": "^6.9.14",
     "@netlify/plugin-nextjs": "^5.9.3",
-    "next": "15.1.4",
+    "next": "^15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "stream-chat": "^8.51.0",
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.1.4",
+    "eslint-config-next": "^15.1.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
